@@ -1,7 +1,8 @@
 Unreleased
 ----------
 
-- ...
+- Fixed problem with header filters not working properly with non-ASCII
+  characters in headers.  (LP #777455)
 
 0.12 (2011-04-25)
 -----------------
